--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ futures-util = "0.3"
 url = "2.3"
 clap = { version = "4.3", features = ["derive"] }
 tokio = { version = "1.0", features = ["full", "signal"] }
+sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
+sea-orm-migration = { version = "0.12.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
